# Production-RAG

./: pyproject.toml
chunking_and_embedding/: config.py  confluence_chunker.py  fireflies_chunker.py  github_chunker.py  gmail_chunker.py  google_drive_chunker.py  hubspot_chunker.py  ingest.py  jira_chunker.py  late_chunking.py  linear_chunker.py  long_doc_handler.py  requirements.txt  run_confluence.py  slack_chunker.py  vector_store.py
chunking_and_embedding/output/: confluence_chunks_dryrun.jsonl  github_chunks.jsonl  github_chunks_dryrun.jsonl  github_embeddings.npy  gmail_chunks_dryrun.jsonl  google_drive_chunks_dryrun.jsonl  hubspot_chunks_dryrun.jsonl  jira_chunks_dryrun.jsonl  linear_chunks_dryrun.jsonl  slack_chunks_dryrun.jsonl
