[project]
name = "production-rag"
version = "0.1.0"
description = "Production-grade RAG pipeline with late chunking and Qdrant"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0",
    "transformers>=4.40,<4.50",
    "tokenizers",
    "tqdm",
    "numpy",
    "qdrant-client>=1.9",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
]

[project.scripts]
ingest = "chunking_and_embedding.ingest:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chunking_and_embedding*"]
